--- a/AirConditionJson/MainWindow.xaml
+++ b/AirConditionJson/MainWindow.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="AirConditionJson.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow" Height="350" Width="525">
+        Title="MainWindow" Height="350" Width="525" Loaded="Window_Loaded">
     <Grid>
         <Button Content="Button" HorizontalAlignment="Left" Margin="300,10,0,0" VerticalAlignment="Top" Width="74" Click="Button_Click1"/>
         <TextBox Name="FileNameTextBox" HorizontalAlignment="Left" Height="23" Margin="43,10,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="199"/>
